<resources>
    <string name="facebook_app_id">184808298966396</string>
    <string name="fb_login_protocol_scheme">fb184808298966396</string>

    <string name="app_name">iCG Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">歡迎使用\n珍愛守護者\n應用程式</string>
    <string name="login_no_network">Unable to connect to the internet</string>
    <string name="action_safe">安全守護</string>
    <string name="action_region">守護區域</string>
    <string name="action_trackers">過去軌跡</string>
    <string name="logout">登出</string>
    <string name="add_tracker">新增珍愛者</string>
    <string name="delete_tracker">刪除%s</string>
    <string name="delete">刪除</string>
    <string name="login_ok">好</string>
    <!--  login Page -->
    <string name="login_parent_account">登入帳號</string>
    <string name="login_account">帳號(電子郵件地址)</string>
    <string name="login_password">密碼</string>
    <string name="login_register_new_account">註冊新帳號</string>
    <string name="login_forget_password">忘記密碼?</string>
    <string name="login_login">登入</string>
    <string name="login_social_signin">使用第三方帳號登入</string>
    <string name="login_google">Google</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_error_email">電子郵件地址錯誤</string>
    <string name="login_already_used">此電子郵件已註冊過，請回到登入頁面直接登入，若忘記密碼請點選忘記密碼，系統將寄送密碼重設至您的信箱</string>
    <string name="login_error_account_or_password">帳號或密碼輸入錯誤，請重新輸入</string>
    <string name="login_error_no_server_connection">無法建立與系統連線, 請稍候再試!</string>
    <!-- Welcome Page -->
    <string name="welcome_read_eula">點選同意以確認iCG校園守護者的使用者協議及隱私政策</string>
    <string name="welcome_user_term_content">"END USER LICENSE AGREEMENT – CORPORATE SOLUTIONS V.01 Please read the following license agreement carefully before using this program. By accepting the agreement, you are agreeing to become the licensee and expressing your complete acceptance of all the terms and conditions of this license agreement. If you do not accept the terms of the agreement, do not install the program. Similarly, use of the program implies your acceptance to be bound by the terms and conditions of this license agreement. This license agreement represents the entire agreement. This license agreement supersedes any prior license agreements licensee with respect to this product or the product it replaces. Similarly, and where permissible under applicable legislation, the terms and conditions of the present license agreement shall take precedence over any communication or advertising material in the event that such material contradicts any of said terms and conditions or where such material predates this license agreement. The acceptance of the terms and conditions of this agreement does not confer any rights of ownership over the programs or products belonging to LITE-ON.  "</string>
    <string name="welcome_join_program">參與使用者體驗改善計畫</string>
    <string name="welcome_permission_term">學校老師可以獲得寶貝睡眠資訊</string>
    <string name="welcome_accept">同意</string>
    <string name="welcome_quit">退出</string>
    <!-- Safty -->
    <string name="safty">安心</string>
    <string name="safty_last_position">此為GPS最後更新位置</string>
    <string name="safty_emergency">緊急求救</string>
    <string name="safty_emergency_release">求救解除</string>
    <!-- Fence -->
    <string name="fence_add_new_fence">請建立新的守護範圍</string>
    <string name="fence_enter_fence">進</string>
    <string name="fence_leave_fence">出</string>
    <string name="edit_fence_title">增加守護區域</string>
    <string name="edit_fence_hint">守護區域名</string>
    <string name="fence_size_title">設定守護之環範圍大小(公里)</string>
    <string name="app_ver">應用程式版本</string>
    <string name="parent_info">使用者資料</string>
    <string name="welcome_user_term">使用者同意授權書</string>
    <string name="use_setting">使用者相關設定</string>
    <!-- Register new account -->
    <string name="register_name">姓名</string>
    <string name="register_password">密碼 (至少八碼英文或數字)</string>
    <string name="register_mobile">手機號碼</string>
    <string name="register_confirm_password">再次確認新密碼</string>
    <string name="register_password_not_match">密碼與確認密碼不相符</string>
    <string name="register_successed">帳號註冊成功</string>
    <string name="register_successed_desc">系統已寄出註冊確認信件到您註冊的電子郵件信箱，請查看信件並點選連結完成註冊程序以登入！</string>

    <!-- Forget Password -->
    <string name="forget_reset_password">重置您的密碼</string>
    <string name="forget_input_original_account">請輸入您當初註冊iCampus Guardian的帳號(電子郵件地址),我們將會傳送重設的密碼至您登錄的電子郵件。</string>
    <string name="forget_send">送出</string>
    <string name="forget_back_to_login">回登入頁面</string>
    <string name="forget_reset_done">系統已重設您的密碼</string>
    <string name="forget_account_not_exist">查無此登錄帳號(電子郵件)，請再確認!</string>
    <string name="forget_check_mailbox_and_setup">請查看信箱並使用系統寄出的聯結重新設定密碼</string>

    <!-- App info and setting -->
    <string name="app_info_setting">App 資訊與設定</string>
    <string name="app_version_title">APP版本</string>
    <string name="app_version">V %s</string>
    <string name="original_password">原密碼</string>
    <string name="new_password">新密碼 (至少八碼英文或數字)</string>
    <string name="confirm_new_password">再次確認新密碼</string>
    <string name="remember_new_password">如有更改密碼將重新登入，請記住新密碼</string>
    <string name="data_updating">資料更新中…</string>
    <string name="update_failed">更新失敗</string>
    <string name="update_failed_confirm">好</string>
    <string name="wrong_password">原密碼錯誤</string>
    <string name="password_not_match">密碼與確認密碼不相同</string>
    <string name="no_gps_data">查無GPS資料</string>
    <string name="tracker_setting">%s設定</string>
    <string name="tracker_info">珍愛者資訊</string>
    <string name="device_info">裝置資訊</string>

    <!-- setup kid profile -->
    <string name="setup_kid_profile">設定寶貝基本資料</string>
    <string name="setup_kid_name">小孩姓名</string>
    <string name="setup_kid_birthday">生日</string>
    <string name="setup_kid_year">年</string>
    <string name="setup_kid_month">月</string>
    <string name="setup_kid_day">日</string>
    <string name="setup_kid_gender">性別</string>
    <string name="setup_kid_male">男生</string>
    <string name="setup_kid_female">女生</string>
    <string name="setup_kid_height">身高</string>
    <string name="setup_kid_cm">公分</string>
    <string name="setup_kid_weight">體重</string>
    <string name="setup_kid_kg">公斤</string>
    <string name="device_model_title">裝置型號 :</string>
    <string name="firmware_title">韌體版本 :</string>
    <string name="device_bound">解除綁定</string>
    <string name="fw_update">韌體更新</string>
    <string name="bt_report_title">位置回報頻率(分鐘)</string>
    <string name="bt_report_sub_title">位置回報頻率將影響裝置使用時間長短</string>
    <string name="bt_search_title">藍牙貼心功能</string>
    <string name="bt_search_sub_title">藍牙尋物：尋找附近以配對裝置位置\n藍芽防丟：避免手機與裝置超過警戒距離</string>
    <string name="bt_search">藍牙尋物</string>
    <string name="bt_close">關閉</string>
    <string name="bt_keep">藍芽防丟</string>
    <string name="pairing_device_select_device">選擇欲配對藍牙裝置</string>
    <!-- child photo setting -->
    <string name="child_photo_photo_permission">iCampus Guardian想取用您的照片</string>
    <string name="child_photo_photo_hint">這樣可以讓你從圖庫中選擇你喜歡的照片當此大頭貼</string>
    <string name="child_photo_photo_deny">不允許</string>
    <string name="child_photo_photo_ok">好</string>
    <string name="child_photo_photo_select_pic">選擇圖片</string>
    <string name="child_photo_photo_used_photo">已使用過圖片</string>
    <string name="child_photo_photo_all_photo">所有照片</string>
    <string name="child_photo_photo">寶貝照片</string>
    <string name="child_photo_photo_crop">裁切照片，請移動、縮放照片至您要的畫面</string>
    <!-- pairing watch page -->
    <string name="pairing_watch_steps">請確認裝置在開機狀態並查看裝置包裝上顯示的裝置名稱及4位數PIN碼後, 點選藍牙裝置配對鍵進行配對！</string>
    <string name="pairing_watch_pair">配對智慧手錶</string>
    <string name="pairing_watch_later">之後再配對</string>
    <string name="pairing_watch_later_in_setting">之後可再至"設定"中配對手環</string>
    <string name="pairing_watch_select_watch">請選擇要進行配對的iCG智慧手錶</string>
    <string name="pairing_watch_input_pin">請輸入手錶上顯示PIN碼</string>
    <string name="pairing_watch_pin_error">PIN碼輸入錯誤或連接失敗,請重新輸入PIN碼並且將手錶靠近裝置</string>
    <string name="pairing_watch_success">iCG智慧手錶配對成功, 已綁定為%s智慧手錶</string>
    <string name="pairing_watch_quit">退出</string>
    <string name="pairing_watch_ask_permission">應用程式要求以繼續</string>
    <string name="pairing_watch_deny">拒絕</string>
    <string name="pairing_watch_accept">允許</string>
    <!-- device pairing -->
    <string name="unbind_watch">解除綁定</string>
    <string name="bind_watch">新增綁定</string>
    <string name="will_unbind_watch">將解除已綁定的智慧手錶</string>
    <string name="bind_cancel">取消</string>
    <string name="bind_confirm">確定</string>
    <string name="bind_uuid_not_match">此手錶已跟小孩%s綁定, 請選擇其他裝置</string>
    <string name="input_tracker_info">輸入珍愛者資訊</string>
    <!-- Menu -->
    <string name="switch_to">切換至%s</string>
    <string name="add_new_child">新增寶貝</string>
    <string name="delete_child">刪除%s</string>
    <string name="app_info">App資訊與設定</string>
    <string name="logout_confirm">確定要登出?</string>
    <string name="delete_tracking">刪除追蹤%s</string>
    <string name="delete_warning">此手機將無法看見該帳號紀錄，但雲端紀錄不會刪除，如日後要由此手機觀看，請再加入該帳號。</string>
    <string name="delete_child_cancel">取消</string>
    <string name="delete_child_confirm">確認</string>
    <string name="child_deleted">%s已刪除</string>
</resources>
