<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:minHeight="?attr/actionBarSize" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/cancel"
            android:layout_width="@dimen/toolbar_icon_size"
            android:layout_height="@dimen/toolbar_icon_size"
			android:layout_centerVertical="true"
            android:background="@drawable/ic_clear_white_24dp"
            app:backgroundTint="@color/md_black_1000" />
        
        <TextView 
	        android:id="@+id/login_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:layout_marginBottom="@dimen/page_title_margin_bottom"
	        android:text="@string/login_register_new_account"
	        android:textSize="@dimen/page_title_text_size"
	        android:textColor="@color/md_black_1000"
	        android:layout_centerInParent="true"/>
        
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/confirm"
            android:layout_width="@dimen/toolbar_icon_size"
            android:layout_height="@dimen/toolbar_icon_size"
			android:layout_centerVertical="true"
            android:background="@drawable/ic_check_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:backgroundTint="@drawable/btn_confirm_bg"/>
        </RelativeLayout>        
     </android.support.v7.widget.Toolbar>
     
    <EditText
	    android:id="@+id/login_name"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/login_edit_text_height"
	    android:layout_below="@id/toolbar"
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_marginRight="@dimen/activity_horizontal_margin"
	  	android:layout_marginBottom="@dimen/page_title_margin_bottom"
	    android:hint="@string/register_name"
	    android:maxLines="1"
	    android:singleLine="true"
	    android:textCursorDrawable="@null"
	    android:textSize="@dimen/login_edit_text_size"
	    android:textColor="@color/md_black_1000"/>

    <EditText
        android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_below="@id/login_name"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
      	android:layout_marginBottom="@dimen/page_title_margin_bottom"
        android:hint="@string/register_mobile"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="phone"
        android:textColor="@color/md_black_1000"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/login_edit_text_size" />

    <EditText
        android:id="@+id/login_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_below="@id/login_phone"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
       	android:layout_marginBottom="@dimen/page_title_margin_bottom"
        android:hint="@string/login_account"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/md_black_1000"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/login_edit_text_size" />

	<EditText
	    android:id="@+id/login_password"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/login_edit_text_height"
	   	android:layout_below="@id/login_account"
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_marginRight="@dimen/activity_horizontal_margin"
	    android:layout_marginBottom="@dimen/page_title_margin_bottom"
	    android:inputType="textPassword"
	    android:hint="@string/register_password"
	    android:maxLines="1"
	    android:singleLine="true"
	    android:textCursorDrawable="@null"
	    android:textSize="@dimen/login_edit_text_size" 
	    android:textColor="@color/md_black_1000"/>
	
	<EditText
	    android:id="@+id/login_password_confirm"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/login_edit_text_height"
	   	android:layout_below="@id/login_password"
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_marginRight="@dimen/activity_horizontal_margin"
	    android:inputType="textPassword"
	    android:hint="@string/register_confirm_password"
	    android:maxLines="1"
	    android:singleLine="true"
	    android:textCursorDrawable="@null"
	    android:textSize="@dimen/login_edit_text_size" 
	    android:textColor="@color/md_black_1000"/>
	<TextView 
	    android:id="@+id/error_hint"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	   	android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_marginRight="@dimen/activity_horizontal_margin"
	    android:text="@string/login_error_email"
	    android:layout_below="@id/login_password_confirm"
	    style="@style/list_item_small"
	    android:textColor="@color/md_red_700"
	    android:visibility="invisible"/>
</RelativeLayout>