<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:minHeight="?attr/actionBarSize" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/page_title_margin_bottom"
                android:text="@string/register_successed"
                android:textSize="@dimen/page_title_text_size"
                android:textColor="@color/md_black_1000"
                android:layout_centerInParent="true"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/login_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@id/toolbar"
        android:text="@string/register_successed_desc"
        android:textSize="@dimen/page_title_text_size"
        android:textColor="@color/md_black_1000"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/back_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_bg"
        android:textColor="@color/md_black_1000"
        android:text="@string/forget_back_to_login" />
</RelativeLayout>