<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" >

		<ImageView
			android:id="@+id/cancel"
			android:layout_width="@dimen/toolbar_icon_size"
			android:layout_height="@dimen/toolbar_icon_size"
			android:layout_centerVertical="true"
			android:background="@drawable/ic_clear_white_24dp"
			app:backgroundTint="@color/md_white_1000" />
		<TextView
			android:id="@+id/page_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:layout_gravity="center"
			android:text="@string/child_photo_photo_select_pic"
			android:textColor="@color/md_white_1000"
			android:textSize="@dimen/page_title_text_size"/>
    </android.support.v7.widget.Toolbar>
     
     <TextView
        android:id="@+id/title_used"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alarm_setting_period_title_height"
        android:layout_below="@id/toolbar"
        android:background="@color/md_grey_200"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:text="@string/child_photo_photo_used_photo"
        style="@style/list_item" />

 	<ImageView 
 	    android:id="@+id/used_img"
 	    android:layout_width="@dimen/choose_photo_item_size"
 	    android:layout_height="@dimen/choose_photo_item_size"
 	    android:layout_below="@id/title_used"/>
 	
 	<ImageView
        android:id="@+id/used_img2"
        android:layout_width="@dimen/choose_photo_item_size"
        android:layout_height="@dimen/choose_photo_item_size"
        android:layout_below="@id/title_used"
        android:layout_toEndOf="@id/used_img"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/used_img3"
        android:layout_width="@dimen/choose_photo_item_size"
        android:layout_height="@dimen/choose_photo_item_size"
        android:layout_below="@id/title_used" 
        android:layout_toEndOf="@id/used_img2" 
        android:visibility="invisible"/>

 	
 	<TextView
        android:id="@+id/title_all_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alarm_setting_period_title_height"
        android:layout_below="@id/used_img"
        android:background="@color/md_grey_200"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:text="@string/child_photo_photo_all_photo"
        style="@style/list_item" />
 	
 	<android.support.v7.widget.RecyclerView
        android:id="@+id/photo_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_below="@id/title_all_photo"
        android:background="@color/md_black_1000"/>
</RelativeLayout>