<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="icgtracker.liteon.com.iCGTracker.DeviceInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="@dimen/toolbar_icon_size"
            android:layout_height="@dimen/toolbar_icon_size"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_navigate_before_white_24dp"
            app:backgroundTint="@color/md_white_1000" />

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/device_info"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/page_title_text_size" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/device_img"
        android:layout_width="@dimen/device_img_size"
        android:layout_height="@dimen/device_img_size"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/md_grey_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/model_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_model_title"
        app:layout_constraintEnd_toStartOf="@id/model_value"
        app:layout_constraintTop_toTopOf="@id/device_img" />

    <TextView
        android:id="@+id/model_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="TN01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/device_img" />

    <TextView
        android:id="@+id/fw_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firmware_title"
        app:layout_constraintEnd_toEndOf="@id/model_title"
        app:layout_constraintStart_toStartOf="@id/model_title"
        app:layout_constraintTop_toTopOf="@id/fw_value" />

    <TextView
        android:id="@+id/fw_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="V1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/model_value" />

    <ImageView
        android:id="@+id/battery_icon"
        android:layout_width="@dimen/battery_icon_width"
        android:layout_height="@dimen/battery_icon_height"
        android:background="@drawable/deviceinfo_img_battery40"
        app:layout_constraintBottom_toBottomOf="@id/device_img"
        app:layout_constraintStart_toStartOf="@id/fw_title" />

    <TextView
        android:id="@+id/battery_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="18%"
        app:layout_constraintBottom_toBottomOf="@id/battery_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/battery_icon" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/device_bound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_bg"
        android:text="@string/device_bound"
        android:textColor="@drawable/btn_text_color"
        app:layout_constraintEnd_toStartOf="@+id/firmware_update"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_img" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/firmware_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_bg"
        android:text="@string/fw_update"
        android:textColor="@drawable/btn_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/device_bound"
        app:layout_constraintTop_toBottomOf="@+id/device_img" />

    <include
        android:id="@+id/bt_report_area"
        layout="@layout/component_device_bt_report_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_search_area"
        app:layout_constraintEnd_toEndOf="@id/firmware_update"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/device_bound"
        app:layout_constraintTop_toBottomOf="@+id/device_bound" />

    <include
        android:id="@+id/bt_search_area"
        layout="@layout/component_device_bt_search_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/firmware_update"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/device_bound"
        app:layout_constraintTop_toBottomOf="@+id/bt_report_area" />


</android.support.constraint.ConstraintLayout>
